--- a/src/window.ui
+++ b/src/window.ui
@@ -4,133 +4,6 @@
 <interface>
   <!-- interface-name flati.ui -->
   <requires lib="gtk+" version="3.24"/>
-  <object class="GtkListBoxRow" id="box_row">
-    <property name="can-focus">True</property>
-    <property name="margin-bottom">4</property>
-    <property name="margin-end">4</property>
-    <property name="margin-start">4</property>
-    <property name="margin-top">4</property>
-    <property name="visible">True</property>
-    <child>
-      <object class="GtkBox">
-        <property name="can-focus">False</property>
-        <property name="spacing">16</property>
-        <property name="visible">True</property>
-        <child>
-          <object class="GtkButton" id="uninstall_button">
-            <property name="can-focus">True</property>
-            <property name="halign">end</property>
-            <property name="label" translatable="yes">Uninstall</property>
-            <property name="margin-end">8</property>
-            <property name="receives-default">True</property>
-            <property name="valign">center</property>
-            <property name="visible">True</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="pack-type">end</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkBox">
-            <property name="can-focus">False</property>
-            <property name="halign">end</property>
-            <property name="orientation">vertical</property>
-            <property name="spacing">4</property>
-            <property name="valign">center</property>
-            <property name="visible">True</property>
-            <child>
-              <object class="GtkLabel" id="app_version">
-                <property name="can-focus">False</property>
-                <property name="halign">end</property>
-                <property name="justify">right</property>
-                <property name="label" translatable="yes">Version</property>
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="app_size">
-                <property name="can-focus">False</property>
-                <property name="halign">end</property>
-                <property name="justify">right</property>
-                <property name="label" translatable="yes">Size</property>
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="pack-type">end</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkImage" id="app_icon">
-            <property name="can-focus">False</property>
-            <property name="hexpand">False</property>
-            <property name="icon-name">application-x-executable</property>
-            <property name="icon-size">3</property>
-            <property name="pixel-size">48</property>
-            <property name="vexpand">True</property>
-            <property name="visible">True</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkBox">
-            <property name="can-focus">False</property>
-            <property name="orientation">vertical</property>
-            <property name="spacing">4</property>
-            <property name="valign">center</property>
-            <property name="visible">True</property>
-            <child>
-              <object class="GtkLabel" id="app_name">
-                <property name="can-focus">False</property>
-                <property name="halign">start</property>
-                <property name="label" translatable="yes">Title</property>
-                <property name="visible">True</property>
-                <attributes>
-                  <attribute name="weight" value="ultrabold"/>
-                </attributes>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="app_summary">
-                <property name="can-focus">False</property>
-                <property name="halign">start</property>
-                <property name="label" translatable="yes">Summary</property>
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-          </packing>
-        </child>
-      </object>
-    </child>
-  </object>
   <object class="GtkApplicationWindow" id="window">
     <property name="can-focus">False</property>
     <property name="default-height">800</property>
@@ -164,7 +37,7 @@
                     <property name="receives-default">True</property>
                     <property name="valign">center</property>
                     <property name="visible">True</property>
-                    <signal name="clicked" handler="on_open_dialog" swapped="yes"/>
+                    <signal name="clicked" handler="on_install_button_clicked" swapped="yes"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -265,6 +138,7 @@
                 <property name="receives-default">True</property>
                 <property name="valign">start</property>
                 <property name="visible">True</property>
+                <signal name="clicked" handler="on_install_button_clicked"/>
               </object>
               <packing>
                 <property name="expand">False</property>
