--- a/src/window.ui
+++ b/src/window.ui
@@ -12,143 +12,115 @@
     <property name="startup-id">Flati</property>
     <property name="title" translatable="yes">Flati</property>
     <child>
-      <object class="GtkStack" id="window_stack">
-        <property name="can-focus">False</property>
-        <property name="visible">True</property>
+      <object class="GtkBox">
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkBox" id="list_window">
-            <property name="can-focus">False</property>
-            <property name="orientation">vertical</property>
-            <property name="visible">True</property>
+          <object class="GtkBox">
+            <property name="halign">center</property>
+            <property name="margin-bottom">16</property>
+            <property name="margin-top">16</property>
+            <property name="spacing">24</property>
+            <property name="valign">center</property>
             <child>
-              <object class="GtkBox">
-                <property name="can-focus">False</property>
+              <object class="GtkStackSwitcher" id="window_switcher">
                 <property name="halign">center</property>
-                <property name="visible">True</property>
-                <child>
-                  <object class="GtkButton" id="install_button">
-                    <property name="can-focus">True</property>
-                    <property name="halign">center</property>
-                    <property name="label" translatable="yes">Install new application</property>
-                    <property name="margin-bottom">8</property>
-                    <property name="margin-end">8</property>
-                    <property name="margin-start">8</property>
-                    <property name="margin-top">8</property>
-                    <property name="receives-default">True</property>
-                    <property name="valign">center</property>
-                    <property name="visible">True</property>
-                    <signal name="clicked" handler="on_install_button_clicked" swapped="yes"/>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="padding">16</property>
-                  </packing>
-                </child>
+                <property name="homogeneous">True</property>
+                <property name="stack">window_stack</property>
+                <property name="valign">center</property>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-              </packing>
             </child>
             <child>
-              <object class="GtkScrolledWindow">
-                <property name="can-focus">True</property>
-                <property name="shadow-type">in</property>
+              <object class="GtkButton" id="app_list_button">
+                <property name="halign">center</property>
+                <property name="label">Install new</property>
+                <property name="valign">center</property>
+                <signal name="clicked" handler="on_app_list_button_clicked"/>
+              </object>
+              <packing>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStack" id="window_stack">
+            <property name="can-focus">False</property>
+            <property name="expand">True</property>
+            <property name="vexpand">True</property>
+            <property name="visible">True</property>
+            <child>
+              <object class="GtkBox" id="list_window">
+                <property name="can-focus">False</property>
+                <property name="orientation">vertical</property>
                 <property name="visible">True</property>
                 <child>
-                  <object class="GtkViewport">
-                    <property name="can-focus">False</property>
+                  <object class="GtkScrolledWindow">
+                    <property name="can-focus">True</property>
+                    <property name="shadow-type">in</property>
                     <property name="visible">True</property>
                     <child>
-                      <object class="GtkListBox" id="app_list_box">
+                      <object class="GtkViewport">
                         <property name="can-focus">False</property>
-                        <property name="selection-mode">none</property>
                         <property name="visible">True</property>
+                        <child>
+                          <object class="GtkListBox" id="app_list_box">
+                            <property name="can-focus">False</property>
+                            <property name="selection-mode">none</property>
+                            <property name="visible">True</property>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
+                  <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
+                  </packing>
                 </child>
               </object>
               <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
+                <property name="name">installed-apps</property>
+                <property name="title">Installed</property>
               </packing>
             </child>
-          </object>
-          <packing>
-            <property name="name">page0</property>
-            <property name="title">page0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkBox" id="empty_window">
-            <property name="can-focus">False</property>
-            <property name="homogeneous">True</property>
-            <property name="orientation">vertical</property>
-            <property name="visible">True</property>
             <child>
-              <object class="GtkBox">
+              <object class="GtkBox" id="updates_window">
                 <property name="can-focus">False</property>
-                <property name="margin-bottom">24</property>
                 <property name="orientation">vertical</property>
-                <property name="valign">end</property>
                 <property name="visible">True</property>
                 <child>
-                  <object class="GtkLabel" id="install_label">
-                    <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">Install an application</property>
-                    <property name="margin-bottom">4</property>
-                    <property name="valign">end</property>
+                  <object class="GtkScrolledWindow">
+                    <property name="can-focus">True</property>
+                    <property name="shadow-type">in</property>
                     <property name="visible">True</property>
-                    <attributes>
-                      <attribute name="scale" value="2"/>
-                    </attributes>
+                    <child>
+                      <object class="GtkViewport">
+                        <property name="can-focus">False</property>
+                        <property name="visible">True</property>
+                        <child>
+                          <object class="GtkListBox" id="updates_list_box">
+                            <property name="can-focus">False</property>
+                            <property name="selection-mode">none</property>
+                            <property name="visible">True</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="open_label">
-                    <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">Open a .flatpakref file</property>
-                    <property name="margin-top">4</property>
-                    <property name="valign">start</property>
-                    <property name="visible">True</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
                   </packing>
                 </child>
               </object>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="open_button">
-                <property name="can-focus">True</property>
-                <property name="halign">center</property>
-                <property name="label">Open</property>
-                <property name="margin-top">24</property>
-                <property name="receives-default">True</property>
-                <property name="valign">start</property>
-                <property name="visible">True</property>
-                <signal name="clicked" handler="on_install_button_clicked"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
+                <property name="name">updatable-apps</property>
+                <property name="title">Updates</property>
               </packing>
             </child>
           </object>
           <packing>
-            <property name="name">page1</property>
-            <property name="title">page1</property>
+            <property name="expand">True</property>
           </packing>
         </child>
       </object>
