--- a/src/window.ui
+++ b/src/window.ui
@@ -32,7 +32,7 @@
             <child>
               <object class="GtkButton" id="app_list_button">
                 <property name="halign">center</property>
-                <property name="label">Refresh</property>
+                <property name="label">Install new</property>
                 <property name="valign">center</property>
                 <signal name="clicked" handler="on_app_list_button_clicked"/>
               </object>
